--- a/index.html
+++ b/index.html
@@ -5,7 +5,13 @@
     <title>Semantic Containers Lab</title>
   </head>
   <body>
-
+<header>
+  
+  <h1></h1>
+  
+  <h2></h2>
+  
+</header>
     <!-- Use a header tag to wrap the h1 and h2 tags instead of a div-->
     <div>
       <h1>Exceptional Header</h1>
