Automatically backed up by Learn

--- a/index.html
+++ b/index.html
@@ -29,11 +29,11 @@
 
         <!-- Wrap the nested img in a figure tag-->
         <figure>
-          <img src="images/intro-pic.jpg" alt="An exceptional living room." title="Welcome to Exceptional Living Rooms">
+          <img src="images/intro-pic.jpg" alt="An exceptional living room." title="Welcome to Exceptional Living Rooms">figcation>"An Exceptional Living Room" by Leonardo DaVinci, photograph</figcaption>
         </figure>
 
           <!-- Wrap this text in a figcaption tag so that it captions the image above-->
-          <figcation>"An Exceptional Living Room" by Leonardo DaVinci, photograph</figcaption>
+          <
         </div>
 
         <!-- Turn this div into an article tag-->
