--- a/index.html
+++ b/index.html
@@ -29,22 +29,24 @@
 
         <!-- Wrap the nested img in a figure tag-->
         <figure>
-          <img src="images/intro-pic.jpg" alt="An exceptional living room." title="Welcome to Exceptional Living Rooms">figcation>"An Exceptional Living Room" by Leonardo DaVinci, photograph</figcaption>
+          <img src="images/intro-pic.jpg" alt="An exceptional living room." title="Welcome to Exceptional Living Rooms">
+          <figcation>"An Exceptional Living Room" by Leonardo DaVinci, photograph</figcaption>
         </figure>
 
           <!-- Wrap this text in a figcaption tag so that it captions the image above-->
-          <
-        </div>
+          
+        
 
         <!-- Turn this div into an article tag-->
-        <div>
+        <article>
           <p>Lorem ipsum dolor sit amet,<br> consectetur adipisicing elit. Quae, perferendis nisi nihil debitis aspernatur doloribus quam eveniet quibusdam tempora esse! Repudiandae, assumenda, debitis doloribus ea eius ab at quae totam. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Asperiores, inventore aliquid ipsam debitis nulla vitae omnis nemo quisquam? Obcaecati dolor ipsum distinctio reprehenderit aliquid autem ea vel provident voluptas nisi.</p>
           <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsa, natus, nobis, tempore recusandae culpa deleniti dignissimos laborum perspiciatis exercitationem obcaecati dolores unde eveniet eius debitis perferendis provident porro. Ipsum, placeat.</p>
-        </div>
+        </article>
       </div>
 
       <!-- Replace this div with a second section tag to indicate this is a separate portion of content-->
-      <div>
+      <section>
+      </section>
 
         <!-- Wrap the nested video content below with figure tags -->
         <div>
