--- a/index.html
+++ b/index.html
@@ -51,7 +51,8 @@
         <figure>
           <video controls>
             <source src="http://ironboard-curriculum-content.s3.amazonaws.com/front-end/lab-assets/real-estate.mp4" type="video/mp4">
-            <source src="http://ironboard-curriculum-content.s3.amazonaws.com/front-end/lab-assets/real-estate.ogv" type="video/ogg"> <figcaption>Exceptional Promotional Video - Source: archive.org</figcaption>
+            <source src="http://ironboard-curriculum-content.s3.amazonaws.com/front-end/lab-assets/real-estate.ogv" type="video/ogg"> 
+            <figcaption>Exceptional Promotional Video - Source: archive.org</figcaption>
             Your browser does not support HTML5 video. <a href="http://browsehappy.com" target="_blank">Please upgrade your browser</a>.
           </video>
         </figure>
@@ -61,7 +62,7 @@
        
 
       <!-- Replace this div with a third section tag -->
-      <div>
+      <di>
           <h3>Links</h3>
           <p>
             <a href="#" target="_blank">Home Restoration</a><br>
