--- a/index.html
+++ b/index.html
@@ -19,8 +19,6 @@
 
     <!-- Replace this div with a main tag to wrap the 'main' content of the webpage-->
     <main>
-      
-    </main>
 
       <!-- Replace this div with a section tag to better describe this portion of content -->
       <section>
@@ -62,7 +60,7 @@
        
 
       <!-- Replace this div with a third section tag -->
-      <di>
+      <seciton>
           <h3>Links</h3>
           <p>
             <a href="#" target="_blank">Home Restoration</a><br>
@@ -76,12 +74,11 @@
             <a href="#" target="_blank">Facebook</a><br>
             <a href="#" target="_blank">Twitter</a>
           </p>
-      </div>
-    </div>
+      </section>
     <!-- End of main part of webpage -->
-
+      </main>
     <!-- Convert this last div so that the contact information and copyright are contained within a footer tag-->
-    <div>
+    <footer>
       <h3>Contact</h3>
       <p>
         email: <a href="mailto:info@exceptionalrealty.com">info@exceptionalrealty.com</a><br>
@@ -90,19 +87,19 @@
       <h3>Correspondence</h3>
 
       <!-- Use the address tag to contain the following address-->
-      <div>
+      <address>
         Exceptional Realty<br>
         P.O.Box 5555<br>
         Brooklyn, NY 11201
-      </div>
+      </address>
 
       <!-- Replace the following div with a details tag -->
-      <div>
+      <details>
         <!-- Replace the following span with a summary tag -->
         <span>&copy; 2014 Exceptional Realty.</span>
         <p>All Rights Reserved.</p>
-      </div>
-    </div>
+      </details>
+    </footer>
 
   </body>
 </html>
