--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <!-- Wrap the nested img in a figure tag-->
         <figure>
           <img src="images/intro-pic.jpg" alt="An exceptional living room." title="Welcome to Exceptional Living Rooms">
-          <figcation>"An Exceptional Living Room" by Leonardo DaVinci, photograph</figcaption>
+          <figcaption>"An Exceptional Living Room" by Leonardo DaVinci, photograph</figcaption>
         </figure>
 
           <!-- Wrap this text in a figcaption tag so that it captions the image above-->
@@ -60,7 +60,7 @@
        
 
       <!-- Replace this div with a third section tag -->
-      <seciton>
+      <section>
           <h3>Links</h3>
           <p>
             <a href="#" target="_blank">Home Restoration</a><br>
